@@ -1,3 +1,9 @@
+2004-04-02  Michael Albinus  <Michael.Albinus@alcatel.de>
+
+	* tramp.el (tramp-handle-insert-directory): Properly quote file
+	name also if not full-directory-p.  Handle wildcard case.
+	Reported by Andreas Schwab <schwab@suse.de>.
+
 2004-03-30  Kai Grossjohann  <kgrossjo@eu.uu.net>
 
 	* tramp.el (tramp-open-connection-setup-interactive-shell):
